# Robot-use-ROS

./: LoadCellmain2.ino  README.md  final_back_encoder.ino  final_front_encoder.ino  modified_twist_keyboard.py  real_publisher.py  velocity_scale.py
devel/: .catkin  setup.sh
devel/lib/gmapping/: slam_gmapping  slam_gmapping_replay
devel/lib/hector_compressed_map_transport/: map_to_image_node
devel/lib/hector_geotiff/: geotiff_node  geotiff_saver
devel/lib/hector_map_server/: hector_map_server
devel/lib/hector_trajectory_server/: hector_trajectory_server
devel/lib/mobile_robot_autonomous_navigation/: mobile_robot_hardware_interface
devel/lib/pkgconfig/: gmapping.pc  hector_compressed_map_transport.pc  hector_geotiff.pc  hector_geotiff_launch.pc  hector_geotiff_plugins.pc  hector_imu_attitude_to_tf.pc  hector_imu_tools.pc  hector_map_server.pc  hector_map_tools.pc  (+16 more)
src/: 7floor2.yaml  rrt_test.py
src/project_control/: CMakeLists.txt
src/project_gazebo/: CMakeLists.txt  package.xml
src/project_gazebo/launch/: robot.launch  sim.launch  sim.launch.py  tf_publisher.launch
src/project_gazebo/rviz/: sim.rviz
src/project_gazebo/urdf/: base.xacro  lidar.xacro  motor.xacro  parts.xacro  pillar.xacro  robot.urdf  robot.urdf.xacro  robot.xacro  robot2.urdf.xacro  wheel.xacro
src/project_gazebo/worlds/: first_world.world
src/project_navigation/: CMakeLists.txt
src/project_slam/: CMakeLists.txt  package.xml
src/project_slam/launch/: mapping.launch  shipbot_slam.launch  shipbot_slam2.launch
src/project_slam/rviz/: mapping_demo.rviz  shipbot_hector.rviz
(+94 files in other folders)
