<?xml version="1.0"?>
<package format="2">
  <name>project_gazebo</name>
  <version>0.0.0</version>
  <description>The description of your package</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>

  <export>
    <cpp cflags="-std=c++11" />
  </export>
</package>

