<?xml version="1.0"?>
<package format="2">
  <name>project_slam</name>
  <version>0.0.1</version>
  <description>The project_slam package</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>roscpp</exec_depend>
  <!-- Add any other dependencies your package needs -->
  
  <export>
    <launch file="launch/shipbot_slam.launch"/>
    <!-- Add any other exports your package provides -->
  </export>
</package>

